tests/ts_syntax/ts_syntax.exp
Error ---------------------------------------------------------------------------------------------------- keyof.js:3:10

The equivalent of TypeScript's `keyof` type operator in Flow is the `$Keys` utility type, used in the form `$Keys<T>`.
[ts-syntax]

   3| type T = keyof O; // ERROR
               ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- never.js:1:10

The closest equivalent of TypeScript's `never` type in Flow is `empty`. [ts-syntax]

   1| type T = never; // ERROR
               ^^^^^


Error ------------------------------------------------------------------------------------------------ undefined.js:1:10

The equivalent of TypeScript's `undefined` type in Flow is `void`. Flow does not have separate `void` and `undefined`
types. [ts-syntax]

   1| type T = undefined; // ERROR
               ^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- unknown.js:1:10

The equivalent of TypeScript's `unknown` type in Flow is `mixed`. [ts-syntax]

   1| type T = unknown; // ERROR
               ^^^^^^^


Error -------------------------------------------------------------------------------------------------- unknown.js:3:10

The equivalent of TypeScript's `unknown` type in Flow is `mixed`. [ts-syntax]

   3| const x: unknown = 1; // ERROR
               ^^^^^^^



Found 5 errors
